--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 body{
-	background: #260B12;
-	background-image: url("../img/FondoChocosfera.png");
-	background-repeat: no-repeat;
-	background-position: 50% 0%;
+  background: #260B12;
+  background-image: url("../img/FondoChocosfera.png");
+  background-repeat: no-repeat;
+  background-position: 50% 0%;
 
 }
 
@@ -17,136 +17,112 @@ body{
 }
 
 #logo{
-	background-image: url("../img/logoc.png");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 350px auto;
-	height: 300px;
-	margin-top: 0;
-	margin: 0 auto;
-	padding-top: 50px;
-	width: 300px;
-	z-index: 11;
+  background-image: url("../img/logoc.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 350px auto;
+  height: 300px;
+  margin-top: 0;
+  margin: 0 auto;
+  padding-top: 50px;
+  width: 300px;
+  z-index: 11;
 }
 
 #logo2{
-	background-image: url("../img/FondoChocosfera.png");
-	position: absolute;
-	height: 100%;
+  background-image: url("../img/FondoChocosfera.png");
+  position: absolute;
+  height: 100%;
 }
 
 #inicio{
-	background-color: #F2B11E;
-	color: #181A4B;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	margin: 0 auto;
-	position: static;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color: #F2B11E;
+  border-bottom-width: 0px;
+  color: #181A4B;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  margin: 0 auto;
+  position: static;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
 
 #que{
-	background-color:#FB676A;
-	color: #171948;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color:#FB676A;
+  border-bottom-width: 0px;
+  color: #171948;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
 
 #historia{
-	background-color:#2F004B;
-	color: #F4B100;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color:#2F004B;
+  border-bottom-width: 0px;
+  color: #F4B100;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
 
 #fabrica{
-	background-color:#FDF31B ;
-	color: #3E004B;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color:#FDF31B ;
+  border-bottom-width: 0px;
+  color: #3E004B;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
 
 #banco{
-	background-color:#FA1653;
-	color: #FFF;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color:#FA1653;
+  border-bottom-width: 0px;
+  color: #FFF;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
 
 #soporte{
-	background-color: #0072BB;
-	color: #FF444B;
-	cursor: default;
-	font-family: 'Montserrat', arial, sans-serif;
-	font-size: 30px;
-	height: 54px;
-	line-height: 54px;
-	position: static;
-	text-align: center;
-	text-transform: uppercase;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  background-color: #0072BB;
+  border-bottom-width: 0px;
+  color: #FF444B;
+  cursor: default;
+  font-family: 'Montserrat', arial, sans-serif;
+  font-size: 30px;
+  height: 54px;
+  line-height: 54px;
+  position: static;
+  text-align: center;
+  text-transform: uppercase;
+  user-select: none;
 }
