--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,13 @@ body{
   z-index:    10;
 }
 
+.collapsible{
+  border-top: 0px solid #ddd;
+  border-right: 0px solid #ddd;
+  border-left: 0px solid #ddd;
+  margin: .5rem 0 1rem 0;
+}
+
 #logo{
   background-image: url("../img/logoc.png");
   background-position: center;
