--- a/mainWindow.ejs
+++ b/mainWindow.ejs
@@ -28,7 +28,7 @@
     <li>
       <div class="collapsible-header valign-wrapper" id="inicio">inicio</div>
       <div class="collapsible-body">
-        <a class="waves-effect waves-light btn-large social github" id="ghb">
+        <a class="waves-effect waves-light btn-large social github" id="ghb" onclick="oauthGithub()">
         <i class="fa fa-github"></i> Sign in with github</a>
       </div>
     </li>
@@ -90,6 +90,9 @@
     const register = document.getElementById('reg');
     register.addEventListener('click', signUp);
 
+    const oauther = document.getElementById('ghb');
+    oauther.addEventListener('click', oauthGithub);
+
     function signIn(e){
       e.preventDefault();
       ipcRenderer.send('signInMain:open');
@@ -98,6 +101,11 @@
     function signUp(e){
       e.preventDefault();
       ipcRenderer.send('signUpMain:open');
+    }
+
+    function oauthGithub(e){
+      e.preventDefault();
+      ipcRenderer.send('OAuthGithub:add')
     }
 
   </script>
