--- a/mainWindow.ejs
+++ b/mainWindow.ejs
@@ -105,7 +105,7 @@
 
     function oauthGithub(e){
       e.preventDefault();
-      ipcRenderer.send('OAuthGithub:add')
+      ipcRenderer.send('OAuthGithub:open')
     }
 
   </script>
