--- a/views/mainWindow.ejs
+++ b/views/mainWindow.ejs
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta name = "viewport" content = "width = device-width, initial-scale = 1">
-  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="../styles/reset.css">
   <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link rel = "stylesheet" href = "./css/materialize.css">
-  <link rel = "stylesheet" href = "./css/materialize-social.css">
-  <link rel = "stylesheet" href = "./css/fontAwesome.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <script src = "./js/materialize.js"></script>
+  <link rel = "stylesheet" href = "../css/materialize.css">
+  <link rel = "stylesheet" href = "../css/materialize-social.css">
+  <link rel = "stylesheet" href = "../css/fontAwesome.css">
+  <link rel="stylesheet" href="../styles/style.css">
+  <script src = "../js/materialize.js"></script>
   <title>CrystalChocolate</title>
 </head>
 <body>
@@ -58,10 +58,10 @@
   </ul>
 
   <script>
-    const key = require('./keys/key');
-    const secret = require('./keys/secret');
-    const KrakenClient = require('./helpers/kraken');
-    const thereIsaChocoCookie = require('./helpers/whereIsMyChocoCookie');
+    const key = require('../keys/key');
+    const secret = require('../keys/secret');
+    const KrakenClient = require('../helpers/kraken');
+    const thereIsaChocoCookie = require('../helpers/whereIsMyChocoCookie');
     const kraken = new KrakenClient(key, secret);
     const electron = require('electron');
     const {ipcRenderer} = electron;
@@ -125,6 +125,6 @@
     const ReactDOM = require('react-dom');
   </script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-  <script type="text/babel" src="like_button.js"></script>
+  <script type="text/babel" src="../components/like_button.js"></script>
 </body>
 </html>
