Use babel in loco.

--- a/views/mainWindow.ejs
+++ b/views/mainWindow.ejs
@@ -124,7 +124,7 @@
     const React = require('react');
     const ReactDOM = require('react-dom');
   </script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <script src="../js/babel.js"></script>
   <script type="text/babel" src="../components/like_button.js"></script>
 </body>
 </html>
